--- a/.env
+++ b/.env
@@ -102,6 +102,10 @@
 # FRONTEND_URL=http://localhost:3000
 # BACKEND_URL=http://localhost:5000
 
+PHONEPE_MERCHANT_ID=M22YJM6BU8QLT
+PHONEPE_CLIENT_ID=SU2503191822024385908547
+PHONEPE_CLIENT_SECRET=3d98556b-f4b0-478c-832f-47b8ff92c615
+PHONEPE_API_URL=https://api.phonepe.com/apis/pg
 
 
 
@@ -109,12 +113,12 @@ MONGO_URI=mongodb://localhost:27017/ecommerce
 JWT_SECRET=mysecretkey123
 REFRESH_SECRET=myrefreshsecret456
 PORT=5000
-EMAIL_USER=yogeshkumar0798@gmail.com
-EMAIL_PASS=luzifddhrgpisebq
-SHIPSY_BOOK_SHIPMENT_URL=https://alphademodashboardapi.shipsy.io/api/customer/integration/consignment/softdata
-SHIPSY_API_KEY=b01ed3562b088ab9c52822e3c18f9e
-SHIPSY_CUSTOMER_CODE=GL017
-SHIPSY_CANCEL_SHIPMENT_URL=https://alphademodashboardapi.shipsy.io/api/customer/integration/consignment/cancel
+EMAIL_USER=malukinternational@gmail.com
+EMAIL_PASS=ttqxoehvowkuadyc
+SHIPSY_BOOK_SHIPMENT_URL=https://dtdcapi.shipsy.io/api/customer/integration/consignment/softdata
+SHIPSY_API_KEY=18a0e6b287a6f623a4a3b5988f031a
+SHIPSY_CUSTOMER_CODE=GL9713 
+SHIPSY_CANCEL_SHIPMENT_URL= http://dtdcapi.shipsy.io/api/customer/integration/consignment/cancel
 WAREHOUSE_NAME=MalukForever Warehouse
 WAREHOUSE_PHONE=+919876543210
 WAREHOUSE_ADDRESS_LINE_1=Warehouse Address Line 1
