--- a/.env
+++ b/.env
@@ -132,5 +132,5 @@ RETURN_CITY=NOIDA
 RETURN_STATE=UTTAR PRADESH
 RETURN_EMAIL=support@malukforever.com
 REDIS_URL=redis://localhost:6379
-FRONTEND_URL=http://localhost:3000
-BACKEND_URL=http://localhost:5000
+FRONTEND_URL=https://malukforever.com/
+BACKEND_URL=https://server.malukforever.com/
