--- a/.env
+++ b/.env
@@ -102,10 +102,10 @@
 # FRONTEND_URL=http://localhost:3000
 # BACKEND_URL=http://localhost:5000
 
-PHONEPE_MERCHANT_ID=M22YJM6BU8QLT
-PHONEPE_CLIENT_ID=SU2503191822024385908547
-PHONEPE_CLIENT_SECRET=3d98556b-f4b0-478c-832f-47b8ff92c615
-PHONEPE_API_URL=https://api.phonepe.com/apis/pg
+# PHONEPE_MERCHANT_ID=M22YJM6BU8QLT
+# PHONEPE_CLIENT_ID=SU2503191822024385908547
+# PHONEPE_CLIENT_SECRET=3d98556b-f4b0-478c-832f-47b8ff92c615
+# PHONEPE_API_URL=https://api.phonepe.com/apis/pg
 
 
 
