--- a/.env
+++ b/.env
@@ -1,91 +1,25 @@
-# # MONGO_URI=mongodb://localhost:27017/ecommerce
-# # JWT_SECRET=your_jwt_secret_key
-# # PORT=5000
-# # EMAIL_USER=yogeshkumar0798@gmail.com
-# # EMAIL_PASS=luzifddhrgpisebq
-# # PHONEPE_MERCHANT_ID=M22YJM6BU8QLT
-# # PHONEPE_SALT_KEY=3d98556b-f4b0-478c-832f-47b8ff92c615
-# # PHONEPE_SALT_INDEX=1
-# # NEXT_PUBLIC_API_BASE_URL=http://localhost:5000
-
-# MONGO_URI=mongodb://localhost:27017/ecommerce
-# JWT_SECRET=your_jwt_secret_key
-# PORT=5000
-# EMAIL_USER=yogeshkumar0798@gmail.com
-# EMAIL_PASS=luzifddhrgpisebq
-# # PHONEPE_MERCHANT_ID=M22YJM6BU8QLT
-# # PHONEPE_SALT_KEY=099eb0cd-02cf-4e2a-8aca-3e6c6aff0399
-# # PHONEPE_SALT_INDEX=1
-
-# # # PHONEPE_MERCHANT_ID=M22YJM6BU8QLT
-# # # PHONEPE_SALT_KEY=3d98556b-f4b0-478c-832f-47b8ff92c615
-# # # PHONEPE_SALT_INDEX=1
-# # NEXT_PUBLIC_API_BASE_URL=http://localhost:5000
 
 
-# PHONEPE_MERCHANT_ID=M22YF3TMHL5NKUAT
-# PHONEPE_SALT_KEY=7b33559b-571d-4eb5-9b2b-858cb1c0a86b
-# PHONEPE_SALT_INDEX=1
-# PHONEPE_API_URL=https://api-preprod.phonepe.com/apis/pg-sandbox/pg/v1/pay
-# NEXT_PUBLIC_API_BASE_URL=http://localhost:5000
-# NEXT_PUBLIC_URL=http://localhost:3000
+# PHONEPE_MERCHANT_ID=M22YJM6BU8QLT
+# PHONEPE_CLIENT_ID=SU2503191822024385908547
+# PHONEPE_CLIENT_SECRET=3d98556b-f4b0-478c-832f-47b8ff92c615
+# PHONEPE_API_URL=https://api.phonepe.com/apis/hermes
+
+
+
+
 
 
 # MONGO_URI=mongodb://localhost:27017/ecommerce
-# JWT_SECRET=your_jwt_secret_key
+# JWT_SECRET=mysecretkey123
+# REFRESH_SECRET=myrefreshsecret456
 # PORT=5000
-# EMAIL_USER=yogeshkumar0798@gmail.com
-# EMAIL_PASS=luzifddhrgpisebq
-# PHONEPE_MERCHANT_ID=M22YF3TMHL5NKUAT
-# PHONEPE_SALT_KEY=7b33559b-571d-4eb5-9b2b-858cb1c0a86b
-# PHONEPE_SALT_INDEX=1
-# PHONEPE_API_URL=https://api-preprod.phonepe.com/apis/pg-sandbox/pg/v1/pay
-# PHONEPE_STATUS_URL=https://api-preprod.phonepe.com/apis/pg-sandbox/pg/v1/status
-# NEXT_PUBLIC_API_BASE_URL=http://localhost:5000
-# NEXT_PUBLIC_URL=http://localhost:3000
-
-
-# MONGO_URI=mongodb://localhost:27017/ecommerce
-# JWT_SECRET=your_jwt_secret_key
-# PORT=5000
-# EMAIL_USER=yogeshkumar0798@gmail.com
-# EMAIL_PASS=luzifddhrgpisebq
-# PHONEPE_MERCHANT_ID=M22YF3TMHL5NKUAT
-# PHONEPE_SALT_KEY=7b33559b-571d-4eb5-9b2b-858cb1c0a86b
-# PHONEPE_SALT_INDEX=1
-# PHONEPE_API_URL=https://api-preprod.phonepe.com/apis/pg-sandbox/pg/v1/pay
-# PHONEPE_STATUS_URL=https://api-preprod.phonepe.com/apis/pg-sandbox/pg/v1/status
-# NEXT_PUBLIC_API_BASE_URL=http://localhost:5000
-# NEXT_PUBLIC_URL=http://localhost:3000
-
-
-# MONGO_URI=mongodb://localhost:27017/ecommerce
-# JWT_SECRET=your_jwt_secret_key
-# PORT=5000
-# EMAIL_USER=yogeshkumar0798@gmail.com
-# EMAIL_PASS=luzifddhrgpisebq
-# PHONEPE_MERCHANT_ID=M22YF3TMHL5NKUAT
-# PHONEPE_SALT_KEY=7b33559b-571d-4eb5-9b2b-858cb1c0a86b
-# PHONEPE_SALT_INDEX=1
-# PHONEPE_API_URL=https://api-preprod.phonepe.com/apis/pg-sandbox/pg/v1/pay
-# PHONEPE_STATUS_URL=https://api-preprod.phonepe.com/apis/pg-sandbox/pg/v1/status
-
-# Test credentials below for your reference:
-# {
-# "merchantId": "TESTVVUAT",
-# "clientId":"TESTVVUAT_2502041721357207510164",
-# "clientVersion":1,
-# "clientSecret":"ZTcxNDQyZjUtZjQ3Mi00MjJmLTgzOWYtMWZmZWQ2ZjdkMzVi"
-# }
-
-# MONGO_URI=mongodb://localhost:27017/ecommerce
-# JWT_SECRET=your_jwt_secret_key
-# PORT=5000
-# EMAIL_USER=yogeshkumar0798@gmail.com
-# EMAIL_PASS=luzifddhrgpisebq
-# SHIPSY_API_URL=https://alphademodashboardapi.shipsy.io/api/customer/integration/consignment/softdata
-# SHIPSY_API_KEY=b01ed3562b088ab9c52822e3c18f9e
-# SHIPSY_CUSTOMER_CODE=GL017
+# EMAIL_USER=malukinternational@gmail.com
+# EMAIL_PASS=ttqxoehvowkuadyc
+# SHIPSY_BOOK_SHIPMENT_URL=https://dtdcapi.shipsy.io/api/customer/integration/consignment/softdata
+# SHIPSY_API_KEY=18a0e6b287a6f623a4a3b5988f031a
+# SHIPSY_CUSTOMER_CODE=GL9713 
+# SHIPSY_CANCEL_SHIPMENT_URL= http://dtdcapi.shipsy.io/api/customer/integration/consignment/cancel
 # WAREHOUSE_NAME=MalukForever Warehouse
 # WAREHOUSE_PHONE=+919876543210
 # WAREHOUSE_ADDRESS_LINE_1=Warehouse Address Line 1
@@ -102,13 +36,9 @@
 # FRONTEND_URL=http://localhost:3000
 # BACKEND_URL=http://localhost:5000
 
-# PHONEPE_MERCHANT_ID=M22YJM6BU8QLT
-# PHONEPE_CLIENT_ID=SU2503191822024385908547
-# PHONEPE_CLIENT_SECRET=3d98556b-f4b0-478c-832f-47b8ff92c615
-# PHONEPE_API_URL=https://api.phonepe.com/apis/pg
-
-
-
+PHONEPE_CLIENT_ID=SU2503191822024385908547
+PHONEPE_CLIENT_SECRET=3d98556b-f4b0-478c-832f-47b8ff92c615
+PHONEPE_CLIENT_VERSION=1  # From PhonePe credentials email
 MONGO_URI=mongodb://localhost:27017/ecommerce
 JWT_SECRET=mysecretkey123
 REFRESH_SECRET=myrefreshsecret456
@@ -117,8 +47,8 @@ EMAIL_USER=malukinternational@gmail.com
 EMAIL_PASS=ttqxoehvowkuadyc
 SHIPSY_BOOK_SHIPMENT_URL=https://dtdcapi.shipsy.io/api/customer/integration/consignment/softdata
 SHIPSY_API_KEY=18a0e6b287a6f623a4a3b5988f031a
-SHIPSY_CUSTOMER_CODE=GL9713 
-SHIPSY_CANCEL_SHIPMENT_URL= http://dtdcapi.shipsy.io/api/customer/integration/consignment/cancel
+SHIPSY_CUSTOMER_CODE=GL9713
+SHIPSY_CANCEL_SHIPMENT_URL=http://dtdcapi.shipsy.io/api/customer/integration/consignment/cancel
 WAREHOUSE_NAME=MalukForever Warehouse
 WAREHOUSE_PHONE=+919876543210
 WAREHOUSE_ADDRESS_LINE_1=Warehouse Address Line 1
@@ -132,5 +62,47 @@ RETURN_CITY=NOIDA
 RETURN_STATE=UTTAR PRADESH
 RETURN_EMAIL=support@malukforever.com
 REDIS_URL=redis://localhost:6379
-FRONTEND_URL=https://malukforever.com/
-BACKEND_URL=https://server.malukforever.com/
+FRONTEND_URL=http://localhost:3000
+BACKEND_URL=http://localhost:5000
+
+
+
+
+
+
+
+
+
+# PHONEPE_MERCHANT_ID=MXXXX
+# PHONEPE_CLIENT_ID=SU2XXXXXXX
+# PHONEPE_CLIENT_SECRET=3d956kgk-h60f-866y-903f-47b8XXXXXX
+# PHONEPE_API_URL=https://api.phonepe.com/apis/hermes
+
+
+
+
+# MONGO_URI=mongodb://localhost:27017/ecommerce
+# JWT_SECRET=mysecretkey123
+# REFRESH_SECRET=myrefreshsecret456
+# PORT=5000
+# EMAIL_USER=malukinternational@gmail.com
+# EMAIL_PASS=ttqxoehvowkuadyc
+# SHIPSY_BOOK_SHIPMENT_URL=https://dtdcapi.shipsy.io/api/customer/integration/consignment/softdata
+# SHIPSY_API_KEY=18a0e6b287a
+# SHIPSY_CUSTOMER_CODE=G4456
+# SHIPSY_CANCEL_SHIPMENT_URL= http://dtdcapi.shipsy.io/api/customer/integration/consignment/cancel
+# WAREHOUSE_NAME=MalukForever Warehouse
+# WAREHOUSE_PHONE=+919876543210
+# WAREHOUSE_ADDRESS_LINE_1=Warehouse Address Line 1
+# WAREHOUSE_CITY=Noida
+# WAREHOUSE_STATE=Uttar Pradesh
+# RETURN_NAME=MalukForever WH HO
+# RETURN_PHONE=+919876543210
+# RETURN_ADDRESS_LINE_1=D-13, First Floor, Sector-3, Noida, 201301
+# RETURN_PINCODE=201301
+# RETURN_CITY=NOIDA
+# RETURN_STATE=UTTAR PRADESH
+# RETURN_EMAIL=support@malukforever.com
+# REDIS_URL=redis://localhost:6379
+# FRONTEND_URL=http://localhost:3000
+# BACKEND_URL=http://localhost:5000
