--- a/.env
+++ b/.env
@@ -1,44 +1,6 @@
-
-
-# PHONEPE_MERCHANT_ID=M22YJM6BU8QLT
-# PHONEPE_CLIENT_ID=SU2503191822024385908547
-# PHONEPE_CLIENT_SECRET=3d98556b-f4b0-478c-832f-47b8ff92c615
-# PHONEPE_API_URL=https://api.phonepe.com/apis/hermes
-
-
-
-
-
-
-# MONGO_URI=mongodb://localhost:27017/ecommerce
-# JWT_SECRET=mysecretkey123
-# REFRESH_SECRET=myrefreshsecret456
-# PORT=5000
-# EMAIL_USER=malukinternational@gmail.com
-# EMAIL_PASS=ttqxoehvowkuadyc
-# SHIPSY_BOOK_SHIPMENT_URL=https://dtdcapi.shipsy.io/api/customer/integration/consignment/softdata
-# SHIPSY_API_KEY=18a0e6b287a6f623a4a3b5988f031a
-# SHIPSY_CUSTOMER_CODE=GL9713 
-# SHIPSY_CANCEL_SHIPMENT_URL= http://dtdcapi.shipsy.io/api/customer/integration/consignment/cancel
-# WAREHOUSE_NAME=MalukForever Warehouse
-# WAREHOUSE_PHONE=+919876543210
-# WAREHOUSE_ADDRESS_LINE_1=Warehouse Address Line 1
-# WAREHOUSE_CITY=Noida
-# WAREHOUSE_STATE=Uttar Pradesh
-# RETURN_NAME=MalukForever WH HO
-# RETURN_PHONE=+919876543210
-# RETURN_ADDRESS_LINE_1=D-13, First Floor, Sector-3, Noida, 201301
-# RETURN_PINCODE=201301
-# RETURN_CITY=NOIDA
-# RETURN_STATE=UTTAR PRADESH
-# RETURN_EMAIL=support@malukforever.com
-# REDIS_URL=redis://localhost:6379
-# FRONTEND_URL=http://localhost:3000
-# BACKEND_URL=http://localhost:5000
-
 PHONEPE_CLIENT_ID=SU2503191822024385908547
 PHONEPE_CLIENT_SECRET=3d98556b-f4b0-478c-832f-47b8ff92c615
-PHONEPE_CLIENT_VERSION=1  # From PhonePe credentials email
+PHONEPE_CLIENT_VERSION=1 
 MONGO_URI=mongodb://localhost:27017/ecommerce
 JWT_SECRET=mysecretkey123
 REFRESH_SECRET=myrefreshsecret456
@@ -62,47 +24,5 @@ RETURN_CITY=NOIDA
 RETURN_STATE=UTTAR PRADESH
 RETURN_EMAIL=support@malukforever.com
 REDIS_URL=redis://localhost:6379
-FRONTEND_URL=http://localhost:3000
-BACKEND_URL=http://localhost:5000
-
-
-
-
-
-
-
-
-
-# PHONEPE_MERCHANT_ID=MXXXX
-# PHONEPE_CLIENT_ID=SU2XXXXXXX
-# PHONEPE_CLIENT_SECRET=3d956kgk-h60f-866y-903f-47b8XXXXXX
-# PHONEPE_API_URL=https://api.phonepe.com/apis/hermes
-
-
-
-
-# MONGO_URI=mongodb://localhost:27017/ecommerce
-# JWT_SECRET=mysecretkey123
-# REFRESH_SECRET=myrefreshsecret456
-# PORT=5000
-# EMAIL_USER=malukinternational@gmail.com
-# EMAIL_PASS=ttqxoehvowkuadyc
-# SHIPSY_BOOK_SHIPMENT_URL=https://dtdcapi.shipsy.io/api/customer/integration/consignment/softdata
-# SHIPSY_API_KEY=18a0e6b287a
-# SHIPSY_CUSTOMER_CODE=G4456
-# SHIPSY_CANCEL_SHIPMENT_URL= http://dtdcapi.shipsy.io/api/customer/integration/consignment/cancel
-# WAREHOUSE_NAME=MalukForever Warehouse
-# WAREHOUSE_PHONE=+919876543210
-# WAREHOUSE_ADDRESS_LINE_1=Warehouse Address Line 1
-# WAREHOUSE_CITY=Noida
-# WAREHOUSE_STATE=Uttar Pradesh
-# RETURN_NAME=MalukForever WH HO
-# RETURN_PHONE=+919876543210
-# RETURN_ADDRESS_LINE_1=D-13, First Floor, Sector-3, Noida, 201301
-# RETURN_PINCODE=201301
-# RETURN_CITY=NOIDA
-# RETURN_STATE=UTTAR PRADESH
-# RETURN_EMAIL=support@malukforever.com
-# REDIS_URL=redis://localhost:6379
-# FRONTEND_URL=http://localhost:3000
-# BACKEND_URL=http://localhost:5000
+FRONTEND_URL=https://malukforever.com/
+BACKEND_URL=https://server.malukforever.com/
