--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PHONEPE_CLIENT_ID=SU2503191822024385908547
 PHONEPE_CLIENT_SECRET=3d98556b-f4b0-478c-832f-47b8ff92c615
-PHONEPE_CLIENT_VERSION=1 
+PHONEPE_CLIENT_VERSION=1
+PHONEPE_PG_URL=https://api.phonepe.com/apis/pg
 MONGO_URI=mongodb://localhost:27017/ecommerce
 JWT_SECRET=mysecretkey123
 REFRESH_SECRET=myrefreshsecret456
